# CodeLLMs

./: .env  Justfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
backend/: __init__.py  requirements.txt  start_mlflow.py
backend/.prefect_storage/: memo_store.toml  prefect.db
backend/app/: .env  __init__.py  main.py
backend/app/routes/: __init__.py  courses.py  problems.py
backend/app/services/: __init__.py  code_execution.py  course_loader.py  grading_service.py  llm_service.py  mlflow_logger.py
backend/configs/: __init__.py  config.py  mlflow_config.yaml
backend/configs/courses/: javascript.toml  python.toml
backend/mlflow_artifacts/0/77e1a34368e145eaa3992d4aea633706/artifacts/: error_loading_javascript.toml
backend/mlflow_artifacts/1/0373378ab9bc4ba5a0b37324cb08774e/artifacts/: found_problem_io-easy-1.json
backend/mlflow_artifacts/1/06d56c58d6e84da98ff3358cfde09bd9/artifacts/: validated_test_case.json
backend/mlflow_artifacts/1/0c4e57aed5fa4ea48b5b972eda89e0e1/artifacts/: validated_test_case.json
backend/mlflow_artifacts/1/0d5035dd854049cd93cc624a0e5069ce/artifacts/: test_case_3_result.json
backend/mlflow_artifacts/1/16839d8ab3444347aaca065574675335/artifacts/: validated_test_case.json
backend/mlruns/0/: meta.yaml
docs/: architecture.md  experience.md  functionalities.md  index.md
frontend/: __init__.py  app.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: base.html  course_detail.html  courses.html  error.html  index.html  problem.html  topic_problems.html
(+219 files in other folders)
