[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "python-dotenv==0.21.0",
    "toml==0.10.2",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "mlflow==2.21.3",
    "mlflow-skinny==2.21.3",
    "prefect==3.3.4",
    "Flask==2.3.2",
    "Flask-Cors==3.0.10",
    "requests==2.28.1",
    "docker==6.1.3",
    "click==8.1.7",
    "pydantic==2.11.3",
    "tenacity==9.0.0",
    "pydantic-settings==2.8.1",
]

[tool.ruff]
line-length = 100
select = ["ALL"]